fix: tolerate null vulnerability ids in ComponentFindings.group()